traffic_management/virtual-service-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 5s
    route:
      - destination:
          host: details
          subset: v1
