traffic_management/virtual-service2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
      - headers:
          end-user:
            exact: kodecloud
    route:
      - destination:
          host: reviews
          subset: v2
  - match:
      - headers:
          end-user:
            exact: testuser
    route:
      - destination:
          host: reviews
          subset: v3
  - route:
      - destination:
          host: reviews
          subset: v1
